fix(base-header): use correct analytics url

--- a/src/components/BaseHeader.astro
+++ b/src/components/BaseHeader.astro
@@ -16,6 +16,6 @@ const { title } = Astro.props;
 <script
   defer
   data-domain="doesmycode.work"
-  src="https://plausible.runtipi.doesmycode.work/js/script.js"></script>
+  src="https://analytics.doesmycode.work/js/script.js"></script>
 
 <title>{title} | Doesmycodework</title>
