fix: use correct icon

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -8,8 +8,7 @@ const projects = [
     description:
       "Runtipi is a homeserver for everyone! One command setup, one click installs for your favorites self-hosted apps.",
     link: "https://github.com/runtipi/runtipi",
-    image:
-      "https://github.com/runtipi/runtipi/blob/develop/public/tipi.png?raw=true",
+    image: "https://raw.githubusercontent.com/runtipi/runtipi/refs/heads/develop/packages/frontend/public/tipi.png",
   },
   {
     title: "GetAShell",
