refactor: use chrome scrollbar instead of custom one

--- a/src/components/ThemeSwitch.astro
+++ b/src/components/ThemeSwitch.astro
@@ -14,6 +14,7 @@ import { Icon } from "astro-icon/components";
       element.classList.toggle("dark");
 
       const isDark = element.classList.contains("dark");
+      element.style.colorScheme = isDark ? "dark" : "light";
       localStorage.setItem("theme", isDark ? "dark" : "light");
     };
 
