--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -57,7 +57,7 @@ const navItems = [
     />
     <div
       id="menu"
-      class="fixed top-0 left-0 min-h-screen w-screen z-50 inset-0 bg-zinc-100 dark:bg-zinc-900 flex-col gap-4 items-center justify-center hidden md:hidden"
+      class="fixed top-0 left-0 min-h-screen w-screen z-50 inset-0 bg-stone-100 dark:bg-stone-950 flex-col gap-4 items-center justify-center hidden md:hidden"
     >
       <Icon
         id="menu-close"
