--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -42,7 +42,7 @@ const { title } = Astro.props;
     <ViewTransitions />
   </head>
   <body
-    class="bg-zinc-100 dark:bg-zinc-900 text-zinc-900 dark:text-zinc-200 min-h-screen flex flex-col justify-between"
+    class="bg-stone-100 dark:bg-stone-950 text-zinc-800 dark:text-zinc-200 min-h-screen flex flex-col justify-between"
   >
     <slot />
   </body><footer>
