--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -7,7 +7,7 @@
   document.addEventListener("astro:page-load", () => {
     function getGiscusTheme() {
       return document.documentElement.classList.contains("dark")
-        ? "noborder_dark"
+        ? "noborder_gray"
         : "noborder_light";
     }
 
