--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -6,7 +6,7 @@ const { title, description, image, link } = Astro.props;
   <div
     class="flex flex-row gap-5 hover:opacity-80 max-w-md justify-center items-center"
   >
-    <div class="min-w-20 min-h-20">
+    <div class="flex items-center justify-center min-w-20 min-h-20">
       <img
         src={image}
         alt={`${title} logo`}
@@ -15,7 +15,7 @@ const { title, description, image, link } = Astro.props;
     </div>
     <div class="flex flex-col gap-1 justify-center">
       <p class="font-bold text-lg">{title}</p>
-      <p class="text-base text-zinc-700 dark:text-zinc-400">{description}</p>
+      <p class="text-base text-zinc-700 dark:text-zinc-300">{description}</p>
     </div>
   </div>
 </a>
