--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,54 +1,61 @@
 ---
-import { Icon } from "astro-icon/components";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
+<script>
+  document.addEventListener("astro:page-load", async () => {
+    const typewriter = document.getElementById("typewriter");
+    const words = ["Software Developer", "Raspberry Pi Enthusiast", "Reckless Engineer", "Basketball Lover"];
+
+    function type(word: string) {
+      for (let i = 0; i < word.length; i++) {
+        setTimeout(() => {
+          typewriter!.innerHTML += word.charAt(i);
+        }, i * 100)
+      }
+    }
+
+    function remove() {
+      for (let i = 0; i < typewriter!.innerHTML.length; i++) {
+        setTimeout(() => {
+          typewriter!.innerHTML = typewriter!.innerHTML.slice(0, -1);
+        }, i * 100)
+      }
+
+    }
+
+    while (true) {
+      for (const word of words) {
+        await new Promise((resolve) => {
+          type(word);
+          setTimeout(resolve, word.length * 100 + 1000);
+        });
+
+        await new Promise((resolve) => {
+          remove();
+          setTimeout(resolve, typewriter!.innerHTML.length * 100);
+        });
+      }
+    }
+  });
+</script>
+
 <BaseLayout title="Home">
-  <div class="flex flex-col gap-5 flex-1 items-center justify-center p-5">
-    <img
-      src="https://avatars.githubusercontent.com/u/106091011?v=4"
-      alt="Profile Image"
-      class="size-48 rounded-full"
-    />
-    <div class="flex flex-col gap-3 items-center justify-center">
-      <p class="text-3xl text-zinc-900 dark:text-zinc-200 font-bold">
-        Doesmycode.work
-      </p>
-      <p class="text-2xl text-zinc-600 dark:text-zinc-500 font-medium italic">
-        @steveiliop56
-      </p>
+  <div class="flex flex-col flex-1 items-center justify-center text-center gap-5 p-5">
+    <div>
+      <img
+        src="https://avatars.githubusercontent.com/u/106091011?v=4"
+        alt="Profile Image"
+        class="size-44 rounded-full"
+      />
     </div>
-    <div class="flex flex-row gap-3">
-      <a href="https://github.com/steveiliop56" aria-label="Github">
-        <Icon
-          name="tabler:brand-github"
-          class="font-medium text-zinc-900 dark:text-zinc-200 size-8 hover:opacity-80"
-        />
-      </a>
-      <a href="mailto:steve@doesmycode.work" aria-label="Email">
-        <Icon
-          name="tabler:mail"
-          class="font-medium text-zinc-900 dark:text-zinc-200 size-8 hover:opacity-80"
-        />
-      </a>
-      <a href="/rss.xml" aria-label="RSS">
-        <Icon
-          name="tabler:rss"
-          class="font-medium text-zinc-900 dark:text-zinc-200 size-8 hover:opacity-80"
-        />
-      </a>
+    <div>
+      <p class="font-bold text-3xl">Hello 👋, I am Stavros, a </p>
+      <p id="typewriter" class="min-h-14 leading-relaxed font-bold text-3xl text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%" />
     </div>
-    <div class="flex flex-row gap-3">
-      <a
-        href="/posts"
-        class="px-3 py-2 rounded-xl bg-zinc-300 dark:bg-zinc-800 hover:opacity-80 text-lg"
-        >Posts</a
-      >
-      <a
-        href="/projects"
-        class="px-3 py-2 rounded-xl bg-zinc-300 dark:bg-zinc-800 hover:opacity-80 text-lg"
-        >Projects</a
-      >
+    <div class="flex flex-row gap-2 items-center justify-center">
+      <a href="/about" class="bg-zinc-300 dark:bg-zinc-800 rounded-md py-2 px-3 hover:opacity-80">About</a>
+      <a href="/posts" class="bg-zinc-300 dark:bg-zinc-800 rounded-md py-2 px-3 hover:opacity-80">Posts</a>
     </div>
   </div>
 </BaseLayout>
