--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -29,14 +29,14 @@ const readTime = Math.round(words / 200);
     <div class="flex flex-col gap-5 items-stretch max-w-4xl">
       <div class="flex flex-col gap-1.5">
         <p class="font-bold text-4xl">{post.data.title}</p>
-        <p class="text-zinc-700 dark:text-zinc-400">
+        <p class="text-zinc-800 dark:text-zinc-200">
           {new Date(Date.parse(post.data.publishedOn)).toDateString()} &bull; {
             readTime
           } min &bull; {post.data.author}
         </p>
         {
           typeof post.data.updatedOn !== "undefined" && (
-            <p class="text-zinc-700 dark:text-zinc-400">
+            <p class="text-zinc-800 dark:text-zinc-200">
               Updated on{" "}
               {new Date(Date.parse(post.data.updatedOn)).toDateString()}
             </p>
@@ -45,9 +45,9 @@ const readTime = Math.round(words / 200);
       </div>
       {
         headings.length > 1 && (
-          <details class="rounded-md p-3 bg-zinc-300 dark:bg-zinc-800">
+          <details class="rounded-md p-3 bg-zinc-100 dark:bg-zinc-800">
             <summary class="font-medium text-xl">Table of Contents</summary>
-            <ul class="flex flex-col list-disc px-5 mt-2 text-zinc-700 dark:text-zinc-400">
+            <ul class="flex flex-col list-disc px-5 mt-2 text-zinc-800 dark:text-zinc-200">
               {headings.map((heading) => (
                 <li class="text-lg hover:opacity-80">
                   <a href={`#${heading.slug}`}>{heading.text}</a>
@@ -58,7 +58,7 @@ const readTime = Math.round(words / 200);
         )
       }
       <article
-        class="max-w-4xl prose prose-zinc prose-pre:overflow-x-auto prose-pre:max-w-xs md:prose-pre:max-w-4xl prose-headings:text-3xl prose-headings:text-zinc-900 dark:prose-headings:text-zinc-200 prose-li:text-zinc-900 dark:prose-li:text-zinc-200 prose-ul:text-zinc-900 dark:prose-ul:text-zinc-200 prose-p:text-zinc-900 dark:prose-p:text-zinc-200 prose-blockquote:not-italic dark:prose-invert"
+        class="break-words prose-code:break-all max-w-4xl prose prose-zinc prose-pre:overflow-x-auto prose-pre:max-w-xs md:prose-pre:max-w-4xl prose-headings:text-3xl prose-headings:text-zinc-800 dark:prose-headings:text-zinc-200 prose-li:text-zinc-800 dark:prose-li:text-zinc-200 prose-ul:text-zinc-800 dark:prose-ul:text-zinc-200 prose-p:text-zinc-800 dark:prose-p:text-zinc-200 prose-blockquote:not-italic dark:prose-invert"
       >
         <Content />
       </article>
