--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
   <div class="flex flex-col flex-1 items-center justify-center text-center gap-5 p-5">
     <div>
       <img
-        src="https://avatars.githubusercontent.com/u/106091011?v=4"
+        src="profile.jpg"
         alt="Profile Image"
         class="size-44 rounded-full"
       />
