chore: enable analytics

--- a/src/components/BaseHeader.astro
+++ b/src/components/BaseHeader.astro
@@ -13,9 +13,10 @@ const { title } = Astro.props;
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 <link rel="manifest" href="/site.webmanifest" />
 
-<!-- <script
+<script
   defer
   data-domain="doesmycode.work"
-  src="https://analytics.doesmycode.work/js/script.js"></script> -->
+  src="https://analytics.doesmycode.work/js/script.js">
+</script>
 
 <title>{title} | Doesmycodework</title>
