chore: fix lighthouse errors

--- a/src/components/BaseHeader.astro
+++ b/src/components/BaseHeader.astro
@@ -14,6 +14,7 @@ const { title } = Astro.props;
 <link rel="manifest" href="/site.webmanifest" />
 
 <script
+  is:inline
   defer
   data-domain="doesmycode.work"
   src="https://analytics.doesmycode.work/js/script.js">
