--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@ const date = new Date().getFullYear();
       </p>
       <p>
         Powered by <a
-          class="text-blue-400 hover:opacity-80 underline"
+          class="text-blue-600 dark:text-blue-400 hover:opacity-80 underline"
           href="https://astro.build">Astro</a
         >
       </p>
