--- a/src/components/BaseHeader.astro
+++ b/src/components/BaseHeader.astro
@@ -13,6 +13,13 @@ const { title } = Astro.props;
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 <link rel="manifest" href="/site.webmanifest" />
 
+<link
+    rel="alternate"
+    type="application/rss+xml"
+    title="Doesmycodework"
+    href={new URL("rss.xml", Astro.site)}
+/>
+
 <script
   is:inline
   defer
