--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -36,9 +36,9 @@ const navItems = [
 
 <header>
   <div class="min-w-full bg-transparent p-5 flex justify-between">
-    <div class="flex flex-row gap-2 justify-center">
+    <div class="flex flex-row gap-2">
       <a href="/">
-        <p class="text-2xl font-bold">Doesmycodework</p>
+        <p class="text-2xl font-bold w-min">Doesmycode.work</p>
       </a>
       <ThemeSwitch />
     </div>
