--- a/src/components/BaseHeader.astro
+++ b/src/components/BaseHeader.astro
@@ -1,6 +1,36 @@
 ---
 const { title } = Astro.props;
+
+const siteTitle = import.meta.env.VITE_SITE_TITLE;
+const plausibleEnable = import.meta.env.VITE_PLAUSIBLE_ENABLE; 
+
 ---
+
+<script>
+  document.addEventListener("astro:page-load", () => {
+    class AstroPlausible extends HTMLElement {
+      connectedCallback() {
+        const enable = this.dataset.plausibleEnable === "true";
+        if (enable) {
+          const plausibleAttributes = {
+            "src": "https://analytics.doesmycode.work/js/script.js",
+            "data-domain": "doesmycode.work",
+            }
+
+          const plausibleScript = document.createElement("script");
+      
+          Object.entries(plausibleAttributes).forEach(([key, value]) =>
+            plausibleScript.setAttribute(key, value),
+          );
+      
+          document.head.appendChild(plausibleScript);
+        }
+      }
+    }
+
+    customElements.define('astro-plausible', AstroPlausible);
+  })
+</script>
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
@@ -16,15 +46,10 @@ const { title } = Astro.props;
 <link
     rel="alternate"
     type="application/rss+xml"
-    title="Doesmycodework"
+    title="Doesmycode.work"
     href={new URL("rss.xml", Astro.site)}
 />
 
-<script
-  is:inline
-  defer
-  data-domain="doesmycode.work"
-  src="https://analytics.doesmycode.work/js/script.js">
-</script>
+<astro-plausible data-plausible-enable={plausibleEnable} />
 
-<title>{title} | Doesmycodework</title>
+<title>{title} | {siteTitle}</title>
