--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const date = new Date().getFullYear();
   <div class="min-w-full flex flex-col justify-center items-center p-5 gap-2">
     <div class="flex flex-col gap-1 items-center justify-center">
       <p class="font-medium">
-        Doesmycodework &copy; {date}
+        Doesmycode.work &copy; {date}
       </p>
       <p>
         Powered by <a
