--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,6 +5,8 @@ import Header from "../components/Header.astro";
 import { ViewTransitions } from "astro:transitions";
 
 const { title } = Astro.props;
+
+const isStaging = import.meta.env.MODE == "staging";
 ---
 
 <script is:inline>
@@ -44,6 +46,16 @@ const { title } = Astro.props;
   <body
     class="bg-stone-100 dark:bg-stone-950 text-zinc-800 dark:text-zinc-200 min-h-screen flex flex-col justify-between"
   >
+    {isStaging && (
+      <div class="absolute top-0 left-0 z-50">
+        <svg xmlns="http://www.w3.org/2000/svg">
+          <polygon points="128 0, 0 0, 0 128" style="fill:#7f1d1d;" />
+        </svg>
+        <div class="absolute top-7 left-0.5 -rotate-45">
+          <p class="text-zinc-200 text-xl font-bold">Staging</p>
+        </div>
+      </div>
+    )}
     <slot />
   </body><footer>
     <Footer />
