--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -27,7 +27,7 @@ const readTime = Math.round(words / 200);
 
 <BaseLayout title={post.data.title}>
   <div class="flex flex-col flex-1 p-5 items-center">
-    <div class="flex flex-col gap-5 items-stretch max-w-4xl">
+    <div class="flex flex-col gap-5 items-stretch max-w-4xl text-wrap break-words">
       <div class="flex flex-col gap-1.5">
         <p class="font-bold text-4xl">{post.data.title}</p>
         <p class="text-zinc-800 dark:text-zinc-200">
@@ -46,7 +46,7 @@ const readTime = Math.round(words / 200);
       </div>
       <Toc headings={headings} />
       <article
-        class="break-words prose-code:break-all max-w-4xl prose prose-zinc prose-pre:overflow-x-auto prose-pre:max-w-xs md:prose-pre:max-w-4xl prose-headings:text-3xl prose-headings:text-zinc-800 dark:prose-headings:text-zinc-200 prose-li:text-zinc-800 dark:prose-li:text-zinc-200 prose-ul:text-zinc-800 dark:prose-ul:text-zinc-200 prose-p:text-zinc-800 dark:prose-p:text-zinc-200 prose-blockquote:not-italic dark:prose-invert"
+        class="prose-headings:break-all break-words prose-code:break-all max-w-4xl prose prose-zinc prose-pre:overflow-x-auto prose-pre:max-w-xs md:prose-pre:max-w-4xl prose-headings:text-3xl prose-headings:text-zinc-800 dark:prose-headings:text-zinc-200 prose-li:text-zinc-800 dark:prose-li:text-zinc-200 prose-ul:text-zinc-800 dark:prose-ul:text-zinc-200 prose-p:text-zinc-800 dark:prose-p:text-zinc-200 prose-blockquote:not-italic dark:prose-invert"
       >
         <Content />
       </article>
