--- a/src/components/BaseHeader.astro
+++ b/src/components/BaseHeader.astro
@@ -2,8 +2,7 @@
 const { title } = Astro.props;
 
 const siteTitle = import.meta.env.VITE_SITE_TITLE;
-const plausibleEnable = import.meta.env.VITE_PLAUSIBLE_ENABLE; 
-
+const plausibleEnable = import.meta.env.VITE_PLAUSIBLE_ENABLE;
 ---
 
 <script>
@@ -13,23 +12,23 @@ const plausibleEnable = import.meta.env.VITE_PLAUSIBLE_ENABLE;
         const enable = this.dataset.plausibleEnable === "true";
         if (enable) {
           const plausibleAttributes = {
-            "src": "https://analytics.doesmycode.work/js/script.js",
+            src: "https://analytics.doesmycode.work/js/script.js",
             "data-domain": "doesmycode.work",
-            }
+          };
 
           const plausibleScript = document.createElement("script");
-      
+
           Object.entries(plausibleAttributes).forEach(([key, value]) =>
             plausibleScript.setAttribute(key, value),
           );
-      
+
           document.head.appendChild(plausibleScript);
         }
       }
     }
 
-    customElements.define('astro-plausible', AstroPlausible);
-  })
+    customElements.define("astro-plausible", AstroPlausible);
+  });
 </script>
 
 <meta charset="utf-8" />
@@ -44,12 +43,12 @@ const plausibleEnable = import.meta.env.VITE_PLAUSIBLE_ENABLE;
 <link rel="manifest" href="/site.webmanifest" />
 
 <link
-    rel="alternate"
-    type="application/rss+xml"
-    title="Doesmycode.work"
-    href={new URL("rss.xml", Astro.site)}
+  rel="alternate"
+  type="application/rss+xml"
+  title="Doesmycode.work"
+  href={new URL("rss.xml", Astro.site)}
 />
 
-<astro-plausible data-plausible-enable={plausibleEnable} />
+<astro-plausible data-plausible-enable={plausibleEnable}></astro-plausible>
 
 <title>{title} | {siteTitle}</title>
