--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,10 +5,10 @@ const date = new Date().getFullYear();
 ---
 
 <footer>
-  <div class="min-w-full flex flex-col justify-center items-center p-5 gap-2">
+  <div class="flex flex-col justify-center items-center p-4 gap-2 min-w-full">
     <div class="flex flex-col gap-1 items-center justify-center">
       <p class="font-medium">
-        Doesmycode.work &copy; {date}
+        Copyright {date} Doesmycode.work
       </p>
       <p>
         Powered by <a
@@ -28,11 +28,7 @@ const date = new Date().getFullYear();
         icon="tabler:mail"
         link="mailto:steve@doesmycode.work"
       />
-      <FooterLink
-        title="Rss"
-        icon="tabler:rss"
-        link="/rss.xml"
-      />
+      <FooterLink title="Rss" icon="tabler:rss" link="/rss.xml" />
     </div>
   </div>
 </footer>
