--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -1,11 +1,16 @@
 ---
 import { Icon } from "astro-icon/components";
+import clsx from "clsx";
 
 const { page } = Astro.props;
 ---
 
 <div
-  class={`flex flex-row ${page.url.prev ? "justify-between" : "justify-end"}`}
+  class={clsx(
+    "flex flex-row",
+    page.url.prev ? "justify-between" : "justify-end",
+    "min-w-full",
+  )}
 >
   {
     page.url.prev && (
