--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,13 +4,14 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
 <BaseLayout title="Not found">
   <div
-    class="flex flex-col gap-3 items-center justify-center flex-1 p-5 text-center"
+    class="flex flex-col flex-1 gap-2 p-4 items-center justify-center text-center"
   >
-    <p class="text-4xl font-bold">Not Found</p>
+    <p class="text-2xl font-bold">Not Found</p>
     <p class="text-lg">
       This page was not found, you might want to go <a
         href="/"
-        class="text-blue-400 hover:opacity-80 underline">home</a
+        class="text-blue-600 dark:text-blue-400 hover:opacity-80 underline"
+        >home</a
       >
     </p>
   </div>
