--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -17,10 +17,12 @@ const { page }: { page: Page } = Astro.props;
 ---
 
 <BaseLayout title="Posts">
-  <div class="flex flex-col items-center justify-center p-5 flex-1">
-    <div class="flex flex-col justify-between gap-8">
-      <p class="font-bold text-4xl">Posts</p>
-      <div class="flex flex-col gap-3">
+  <div class="flex flex-col flex-1 p-4 items-center">
+    <div class="flex flex-col gap-4 items-start">
+      <a href="/posts">
+        <p class="text-2xl font-bold">Posts</p>
+      </a>
+      <div class="flex flex-col gap-2">
         {page.data.map((post) => <PostCard post={post} />)}
       </div>
       <Pagination page={page} />
