--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -8,7 +8,8 @@ const projects = [
     description:
       "Runtipi is a homeserver for everyone! One command setup, one click installs for your favorites self-hosted apps.",
     link: "https://github.com/runtipi/runtipi",
-    image: "https://raw.githubusercontent.com/runtipi/runtipi/refs/heads/develop/packages/frontend/public/tipi.png",
+    image:
+      "https://raw.githubusercontent.com/runtipi/runtipi/refs/heads/develop/packages/frontend/public/tipi.png",
   },
   {
     title: "GetAShell",
@@ -44,8 +45,8 @@ const projects = [
 ---
 
 <BaseLayout title="Projects">
-  <div class="flex flex-col justify-center items-center flex-1 p-5">
-    <div class="flex flex-col gap-6 items-stretch">
+  <div class="flex flex-col flex-1 p-4 justify-center items-center">
+    <div class="flex flex-col gap-4 items-stretch">
       <p class="text-4xl font-bold">Projects</p>
       <p>Here are my favorite projects that I have built/worked on:</p>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
