--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -34,7 +34,9 @@ const navItems = [
   });
 </script>
 
-<header class="min-w-full bg-transparent p-4 flex justify-between">
+<header
+  class="min-w-full bg-transparent p-4 flex justify-between sticky top-0 backdrop-blur-2xl border-b-2 border-stone-950 border-opacity-5 dark:border-stone-100 dark:border-opacity-5"
+>
   <div class="flex flex-row gap-2">
     <a href="/">
       <p class="text-2xl font-bold w-min">Doesmycode.work</p>
