fix: make sure header is always on top

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -35,7 +35,7 @@ const navItems = [
 </script>
 
 <header
-  class="min-w-full bg-transparent p-4 flex justify-between sticky top-0 backdrop-blur-2xl border-b-2 border-stone-950 border-opacity-5 dark:border-stone-100 dark:border-opacity-5"
+  class="min-w-full bg-transparent p-4 flex justify-between sticky top-0 backdrop-blur-2xl border-b-2 border-stone-950 border-opacity-5 dark:border-stone-100 dark:border-opacity-5 z-50"
 >
   <div class="flex flex-row gap-2">
     <a href="/">
