refactor: change project page text

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -33,7 +33,9 @@ const projects: Projects[] = [
   <div class="flex flex-col flex-1 p-4 justify-center items-center">
     <div class="flex flex-col gap-4 items-stretch">
       <p class="text-4xl font-bold">Projects</p>
-      <p>Here are my favorite projects that I have built/worked on:</p>
+      <p>
+        I have worked on a lot of project but the ones below are my favorites
+      </p>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         {projects.map((project) => <ProjectCard {...project} />)}
       </div>
