refactor: new theme

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -35,7 +35,7 @@ const navItems = [
 </script>
 
 <header
-  class="min-w-full bg-transparent p-4 flex justify-between sticky top-0 backdrop-blur-3xl border-b-2 border-stone-950 border-opacity-5 dark:border-stone-100 dark:border-opacity-5 z-50"
+  class="min-w-full bg-transparent p-4 flex justify-between sticky top-0 backdrop-blur-3xl border-b-2 border-zinc-950 border-opacity-5 dark:border-zinc-100 dark:border-opacity-5 z-50"
 >
   <div class="flex flex-row gap-2">
     <a href="/">
@@ -54,7 +54,7 @@ const navItems = [
   />
   <div
     id="menu"
-    class="fixed top-0 left-0 min-h-screen w-screen z-50 inset-0 bg-stone-100 dark:bg-stone-950 flex-col gap-4 items-center justify-center hidden md:hidden"
+    class="fixed top-0 left-0 min-h-screen w-screen z-50 inset-0 bg-neutral-100 dark:bg-neutral-900 flex-col gap-4 items-center justify-center hidden md:hidden"
   >
     <Icon
       id="menu-close"
