fix: use correct script url

--- a/src/components/BaseHeader.astro
+++ b/src/components/BaseHeader.astro
@@ -12,7 +12,7 @@ const analyticsEnable = import.meta.env.VITE_ANALYTICS_ENABLE;
         const enable = this.dataset.analyticsEnable === "true";
         if (enable) {
           const umamiAttributes = {
-            src: "https://umami-analytics.runtipi.local/script.js",
+            src: "https://analytics.doesmycode.work/script.js",
             "data-website-id": "1940b296-a8c6-4663-bcb0-0ee20a0b7c97",
           };
 
