--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
   >
     <div>
       <img
-        src="/profile.jpg"
+        src="/profile.png"
         alt="Profile Image"
         class="size-44 rounded-full"
       />
